# assault-ai-pilot

./: .buildinfo  .buildinfo.bak  .gitignore  01 PLAN_ASSAULT.md  02 PLAN_ASSAULT_UPDATED.md  03 PLAN_ASSAULT_ASSAULT_REWRITE.md  04 close_combat_estado_consolidado.md  10 README_Close_Combat.md  Nrunning.txt  README.md  RUNNING.md  START_HERE.md  _genera_sim_y_ui.ps1  architecture_uml.puml  classes_assault_model.dot  copilot.txt  create-assault-engine.ps1  create-assault-viewer.ps1  create_assault_model_structure.ps1  design_notes.html  engine_design_notes.html  genera_uml.ps1  generar_doc.txt  generate_uml.ps1  genindex.html  git_publish.ps1  index.html  list_docs.ps1  objects.inv  packages_assault_model.dot  play_replay.py  publish-docs.ps1  pyproject.toml  search.html  searchindex.js  serve_web.py  setup-assault-web.ps1  tree.txt
assault-engine/: .gitignore  NEXT_STEPS.txt  README.md  pyproject.toml
assault-engine/docs/: index.rst
assault-engine/tests/: test_assault_action.py  test_assault_executor.py  test_close_combat.py  test_movement_basic.py  test_ranged_fire.py  test_reaction_fire.py  test_reaction_fire_zoc.py  test_retreat_advanced.py
assault-env/: .gitignore  README.md  pyproject.toml
assault-env/_eval/: evaluate_level3_vs_heuristic.py  evaluate_level6_vs_heuristic.py  verify_solved.py
assault-env/assault_env/: __init__.py  _scenario_base.py  assault_env.rst  env.py  renderer.py  runner.py  scenario.py
assault-env/docs/: conf.py  curriculum.rst  environment.rst  evaluation.rst  index.rst  integration.rst  overview.rst  requirements.txt  reward_design.rst  scenarios.rst  scenarios_p2.rst
assault-env/eval/: evaluate_vs_heuristic.py
assault-env/maps/: map_P1.json
assault-env/scripts/: run_episode.py  run_rl_episode.py
assault-env/train/: eval_p2_deterministic.py  eval_p4_roles.py  (+6 more)
assault-viewer/: .gitignore  README.md  main.py  pyproject.toml  replay_viewer.py
(+403 files in other folders)
