[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assault-env"
version = "0.1.0"
description = "Gym environment and runners for Assault"
requires-python = ">=3.10"

dependencies = [
    "gymnasium",
    "assault-engine",
]

[tool.setuptools]
packages = ["assault_env"]
