[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assault-viewer"
version = "0.1.0"
description = "Replay viewer for Assault"
requires-python = ">=3.10"

dependencies = [
    "pygame",
    "assault-engine",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]